--- a/a_01/css/style.css
+++ b/a_01/css/style.css
@@ -1,4 +1,8 @@
-
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 h1 {
     margin-top: 100px;
@@ -78,12 +82,14 @@ img {
 img:hover {
     opacity: 1.0;
     }
+
 p{
     margin-top: 100px;
     margin-bottom: 100px;
     margin-right: 15em;
     margin-left: 14em;
-    font-family: 'Quicksand', sans-serif;;
+    font-family: 'Quicksand', sans-serif;
+
 
 }
 
@@ -103,8 +109,8 @@ p{
  border: 1px solid #000;
  margin: 2em;
  width: 40em;
- padding: 5px;
-    margin-left: 30em;
+ padding: 5em;
+ margin-left: 25em;
    margin-top: 0em;
    margin-bottom: 8em;
    font-family: 'Quicksand', sans-serif;
@@ -135,15 +141,46 @@ p{
 
 #min {
 margin-top: 9em;
-    margin-bottom: 1em;
+    margin-bottom: 20em;
     margin-right: 30em;
     margin-left: 6em;
     font-family: 'Quicksand', sans-serif;;
+}
+#wrapper {
+    width: 960px;
+    margin: 10px auto;
+}
+
+#two_columns {
+    
+    padding: 20px;
+}
+
+#left {
+    background-color: #FAEEE4;
+    padding: 20px;
+    margin: 80px;
+    float: left;
+    width: 38%; 
+}
+
+#right {
+    background-color: #CFD8CF;
+    padding: 10px;
+    float: center;
+    margin-left: 6em
+    width: 60%;
+
+}
+
+.clearfix:after { 
+    visibility: hidden;
+    display: block;
+    clear: both;
 }
 
 .footer {
     padding-bottom: -25px;
     border-bottom: 2px solid black;
 }
-
 
